name: swtor-ui
version: 0.1.0.0
synopsis: Star Wars: The Old Republic user interface layout generator
description:
  Describe how SWTOR UI elements are anchored to the screen and each other
  programmatically and generate a UI profile as an alternative to moving each
  element to the desired position manually in the SWTOR UI editor.
homepage: https://github.com/ion1/swtor-ui#readme
license: MIT
license-file: LICENSE
author: Johan Kiviniemi
maintainer: devel@johan.kiviniemi.name
copyright: 2016 Johan Kiviniemi
category: Game, Utility
build-type: Simple
extra-source-files: generated/ion.xml, README.md, stack.yaml
cabal-version: >= 1.10

executable swtor-ui
  hs-source-dirs: app
  main-is: Main.hs
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends: base >= 4.8 && < 5
               , swtor-ui
  default-language: Haskell2010

executable swtor-ui-generate-default
  hs-source-dirs: app
  main-is: GenerateDefault.hs
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends: base >= 4.8 && < 5
               , swtor-ui
  default-language: Haskell2010

library
  hs-source-dirs: src
  exposed-modules: SWTOR.UIProfile
                 , SWTOR.UIProfile.Internal.Default
                 , SWTOR.UIProfile.Layout
                 , SWTOR.UIProfile.Placement
                 , SWTOR.UIProfile.XML
                 , SWTOR.UIProfile.XMLSerialization
  ghc-options: -Wall -rtsopts -with-rtsopts=-N
  build-depends: base >= 4.8 && < 5
               , conduit
               , containers
               , deepseq
               , directory
               , exceptions
               , lens
               , mtl
               , resourcet
               , text
               , xml-conduit
               , xml-types
  default-language: Haskell2010

source-repository head
  type: git
  location: https://github.com/ion1/swtor-ui
